[gd_scene load_steps=9 format=3 uid="uid://haftrks0la1y"]

[ext_resource type="Script" path="res://Scripts/end_of_round_screen.gd" id="1_ajpby"]
[ext_resource type="FontFile" uid="uid://donxec21iqi2o" path="res://Assets/fonts/PixelOperator8.ttf" id="1_ef32e"]
[ext_resource type="FontFile" uid="uid://d2voppd6fmkh6" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="2_glvd4"]
[ext_resource type="Texture2D" uid="uid://crxc7ydjkvt3h" path="res://Assets/images/divide.png" id="2_op7ie"]
[ext_resource type="Texture2D" uid="uid://d48fil2fy2do" path="res://Assets/images/equals.png" id="3_pg3j8"]
[ext_resource type="Texture2D" uid="uid://evf007ggceo8" path="res://Assets/images/multiply.png" id="4_1vqt7"]
[ext_resource type="Theme" uid="uid://cs64m8jorbkrh" path="res://Assets/themes/button big_theme.tres" id="7_1nflb"]
[ext_resource type="PackedScene" uid="uid://b2fq8qe77ht7c" path="res://Scenes/fail_screen.tscn" id="8_n63ae"]

[node name="EndOfRoundScreen" type="Node2D"]
position = Vector2(960, 540)
script = ExtResource("1_ajpby")

[node name="UI" type="Node2D" parent="."]
position = Vector2(0, 44)
scale = Vector2(1.5, 1.5)

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -192.0
offset_right = 248.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="ColorRect2" type="ColorRect" parent="UI"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -136.0
offset_right = 240.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="ColorRect4" type="ColorRect" parent="UI"]
offset_left = -240.0
offset_top = -184.0
offset_right = 240.0
offset_bottom = -142.0
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="RoundLabel" type="Label" parent="UI/ColorRect4"]
layout_mode = 0
offset_right = 480.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("2_glvd4")
theme_override_font_sizes/font_size = 24
text = "Round 0 Results"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Row1" type="Node2D" parent="UI"]
position = Vector2(-40, -104)

[node name="ColorRect3" type="ColorRect" parent="UI/Row1"]
z_index = 2
offset_left = -192.0
offset_top = -16.0
offset_bottom = 16.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="Label" type="Label" parent="UI/Row1/ColorRect3"]
layout_mode = 0
offset_left = 8.0
offset_right = 192.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_ef32e")
text = "Total Damage:"
vertical_alignment = 1

[node name="ColorRect5" type="ColorRect" parent="UI/Row1"]
z_index = 2
offset_top = -16.0
offset_right = 192.0
offset_bottom = 16.0
color = Color(0.262933, 0.262932, 0.262932, 1)

[node name="TotalDamageLabel" type="Label" parent="UI/Row1/ColorRect5"]
layout_mode = 0
offset_left = 8.0
offset_right = 200.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_ef32e")
vertical_alignment = 1

[node name="Row2" type="Node2D" parent="UI"]
position = Vector2(-40, -32)

[node name="ColorRect3" type="ColorRect" parent="UI/Row2"]
z_index = 2
offset_left = -192.0
offset_top = -16.0
offset_bottom = 16.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="Label" type="Label" parent="UI/Row2/ColorRect3"]
layout_mode = 0
offset_left = 8.0
offset_right = 192.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_ef32e")
text = "Quota:"
vertical_alignment = 1

[node name="ColorRect5" type="ColorRect" parent="UI/Row2"]
z_index = 2
offset_top = -16.0
offset_right = 192.0
offset_bottom = 16.0
color = Color(0.262933, 0.262932, 0.262932, 1)

[node name="QuotaLabel" type="Label" parent="UI/Row2/ColorRect5"]
layout_mode = 0
offset_left = 8.0
offset_right = 200.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_ef32e")
vertical_alignment = 1

[node name="Row3" type="Node2D" parent="UI"]
position = Vector2(-40, 40)

[node name="multiply" type="Sprite2D" parent="UI/Row3"]
z_index = 3
position = Vector2(28, 0)
rotation = 0.785398
scale = Vector2(3.645, 3.645)
texture = ExtResource("4_1vqt7")

[node name="equals" type="Sprite2D" parent="UI/Row3"]
z_index = 3
position = Vector2(164, 0)
scale = Vector2(3.645, 3.645)
texture = ExtResource("3_pg3j8")

[node name="ColorRect6" type="ColorRect" parent="UI/Row3"]
z_index = 2
offset_left = 192.0
offset_top = -16.0
offset_right = 272.0
offset_bottom = 16.0
color = Color(0.262933, 0.262932, 0.262932, 1)

[node name="TotalMoney" type="Label" parent="UI/Row3/ColorRect6"]
layout_mode = 0
offset_left = 8.0
offset_right = 64.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_ef32e")
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="UI/Row3"]
z_index = 2
offset_left = -192.0
offset_top = -16.0
offset_right = -96.0
offset_bottom = 16.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="Label" type="Label" parent="UI/Row3/ColorRect3"]
layout_mode = 0
offset_left = 8.0
offset_right = 96.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_ef32e")
text = "Money:"
vertical_alignment = 1

[node name="ColorRect5" type="ColorRect" parent="UI/Row3"]
z_index = 2
offset_left = 56.0
offset_top = -16.0
offset_right = 136.0
offset_bottom = 16.0
color = Color(0.262933, 0.262932, 0.262932, 1)

[node name="EqualsLabel" type="Label" parent="UI/Row3/ColorRect5"]
layout_mode = 0
offset_left = 8.0
offset_right = 80.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_ef32e")
vertical_alignment = 1

[node name="ColorRect4" type="ColorRect" parent="UI/Row3"]
z_index = 2
offset_left = -96.0
offset_top = -16.0
offset_bottom = 16.0
color = Color(0.262745, 0.262745, 0.262745, 1)

[node name="MoneyLabel" type="Label" parent="UI/Row3/ColorRect4"]
layout_mode = 0
offset_left = 8.0
offset_right = 96.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_ef32e")
vertical_alignment = 1

[node name="divide" type="Sprite2D" parent="UI"]
z_index = 3
position = Vector2(56, -68)
scale = Vector2(3.7, 3.7)
texture = ExtResource("2_op7ie")

[node name="equals" type="Sprite2D" parent="UI"]
z_index = 3
position = Vector2(56, 4)
scale = Vector2(3.7, 3.7)
texture = ExtResource("3_pg3j8")

[node name="Button" type="Button" parent="UI"]
modulate = Color(0.542318, 0.542318, 0.542318, 1)
self_modulate = Color(0.262745, 0.262745, 0.262745, 1)
z_index = 3
offset_left = 90.6667
offset_top = 74.6667
offset_right = 229.667
offset_bottom = 125.667
theme = ExtResource("7_1nflb")
theme_override_fonts/font = ExtResource("1_ef32e")
disabled = true
keep_pressed_outside = true

[node name="Label" type="Label" parent="UI/Button"]
layout_mode = 0
offset_right = 139.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_ef32e")
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FailScreen" parent="." instance=ExtResource("8_n63ae")]
z_index = 5
position = Vector2(0, -1400)

[connection signal="button_down" from="UI/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="UI/Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="UI/Button" to="." method="_on_button_pressed"]
